<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:context=".screens.welcome.WelcomeActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/ic_welcome" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/DarkGrey.TextSize24.ExtraBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_welcome_label" />

            <TextView
                style="@style/LightGrey.TextSize16.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_tag_line" />

            <TextView
                style="@style/DarkGrey.TextSize24.ExtraBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tv_ques_add_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textfield_addName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/et_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_continue_btn"
                style="@style/DarkGreyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_btn_disabled"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/btn_label_continue"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>